[Fix][Connector-V2] Await privilege grant to fix flaky Paimon tests