@@ -46,6 +46,7 @@ import org.testcontainers.utility.MountableFile;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @DisabledOnContainer(
@@ -152,7 +153,7 @@ public class PaimonIT extends TestSuiteBase implements TestResource {
             }
         }
         PrivilegeUtil.awaitPrivilegeApplied(
-                privilegedCatalog, privilegeTypes, List.of(tableIdentifier, tableIdentifier1));
+                privilegedCatalog, privilegeTypes, Arrays.asList(tableIdentifier, tableIdentifier1));
     }
 
     /** User not grant read privilege read data test cases for the Paimon table */
